// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountSelector it displays the accounts in a table view and option to load next account 1`] = `
.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  background-color: var(--blue-gray);
}

.c1 hr {
  border-color: var(--gray-medium);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  margin: 1.5em 0;
}

.c7 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 h4 {
  margin: 0;
  color: var(--gray-dark);
}

.c3 p {
  margin: 0;
  line-height: 1.5;
}

.c5 {
  position: relative;
  cursor: pointer;
}

.c5 svg {
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c5 .copy-text {
  position: absolute;
  top: calc(50% - 0.2em);
  left: calc(100% + 0.25em);
  color: var(--purple-medium);
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
  pointer-events: none;
}

.c5:hover svg {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c5:hover .copy-text {
  opacity: 1;
  pointer-events: all;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25em;
  line-height: 1.5;
}

.c4 > a {
  color: var(--purple-medium);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a:hover {
  color: var(--purple-medium);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 > a svg {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
  vertical-align: middle;
}

.c4 > a svg:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
  fill: var(--purple-medium);
}

.c2 {
  position: relative;
  display: inline-block;
  width: 18px;
  height: 18px;
  border-width: 1px;
  border-style: solid;
  border-radius: 50%;
  margin: 4px 0 0 1em;
  border-color: var(--purple-medium);
}

.c2:after {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 50%;
  width: 11px;
  height: 11px;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c2:after {
  background-color: var(--purple-medium);
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  font-size: 1.25em;
}

.c10 svg path {
  stroke: var(--black);
}

.c10:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c10:hover svg path {
  stroke: var(--purple-medium);
}

.c10:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c10:active svg path {
  stroke: var(--white) !important;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 > *:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 > *:last-child:not(.toggle-wrapper) {
  -webkit-flex: 0 0 65%;
  -ms-flex: 0 0 65%;
  flex: 0 0 65%;
}

.c8 span.info,
.c8 span.error {
  font-size: 0.875rem;
}

.c8 span.error {
  color: var(--red-medium);
}

.c9 .toggle-wrapper {
  position: relative;
}

.c9 input {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 0;
  height: 0;
  opacity: 0;
}

.c9 .toggle {
  display: inline-block;
  position: relative;
  width: 2.25em;
  height: 1.5em;
  border-radius: 0.75em;
  border: 2px solid var(--blue-medium);
  background-color: var(--blue-medium);
}

.c9 .toggle::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: calc(1.5em - 4px);
  height: calc(1.5em - 4px);
  border-radius: 50%;
  background-color: var(--white);
}

.c9 input:checked ~ .toggle {
  border-color: var(--blue-dark);
  background-color: var(--blue-dark);
}

.c9 input:checked ~ .toggle::after {
  left: auto;
  right: 0;
}

<div>
  <div>
    <div
      class="c0 c1"
    >
      <h2>
        Select Account
      </h2>
      <p />
    </div>
    <br />
    <table>
      <thead>
        <tr>
          <th />
          <th>
            #
          </th>
          <th>
            Name
          </th>
          <th>
            Address
          </th>
          <th>
            Balance
          </th>
          <th>
            Id
          </th>
          <th>
            Path
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="selectable"
        >
          <td
            data-testid="selected-account"
          >
            <div
              class="c2"
              color="purple"
            />
          </td>
          <td>
            0
          </td>
          <td>
            Account 
            0
          </td>
          <td>
            <div
              class="c3"
            >
              <div
                class="c4"
                color="var(--purple-medium)"
              >
                <span>
                  t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi
                </span>
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  <svg
                    class="has-fill"
                    fill="var(--black)"
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,21H5c-1.1,0-2-0.9-2-2V5c0-1.1,0.9-2,2-2h7v2H5v14h14v-7h2v7C21,20.1,20.1,21,19,21z"
                    />
                    <path
                      d="M21 10L19 10 19 5 14 5 14 3 21 3z"
                    />
                    <path
                      d="M6.7 8.5H22.3V10.5H6.7z"
                      transform="rotate(-45.001 14.5 9.5)"
                    />
                  </svg>
                </a>
                <span
                  class="c5"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class=""
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </td>
          <td>
            1
          </td>
          <td>
            t0101
          </td>
          <td>
            m/44'/1'/0'/0/0
          </td>
        </tr>
        <tr
          class="selectable"
        >
          <td />
          <td>
            1
          </td>
          <td>
            Account 
            1
          </td>
          <td>
            <div
              class="c3"
            >
              <div
                class="c4"
                color="var(--purple-medium)"
              >
                <span>
                  t1nq5k2mps5umtebdovlyo7y6a3ywc7u4tobtuo3a
                </span>
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1nq5k2mps5umtebdovlyo7y6a3ywc7u4tobtuo3a"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  <svg
                    class="has-fill"
                    fill="var(--black)"
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,21H5c-1.1,0-2-0.9-2-2V5c0-1.1,0.9-2,2-2h7v2H5v14h14v-7h2v7C21,20.1,20.1,21,19,21z"
                    />
                    <path
                      d="M21 10L19 10 19 5 14 5 14 3 21 3z"
                    />
                    <path
                      d="M6.7 8.5H22.3V10.5H6.7z"
                      transform="rotate(-45.001 14.5 9.5)"
                    />
                  </svg>
                </a>
                <span
                  class="c5"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class=""
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </td>
          <td>
            5
          </td>
          <td>
            t0102
          </td>
          <td>
            m/44'/1'/0'/0/1
          </td>
        </tr>
        <tr
          class="selectable"
        >
          <td />
          <td>
            2
          </td>
          <td>
            Account 
            2
          </td>
          <td>
            <div
              class="c3"
            >
              <div
                class="c4"
                color="var(--purple-medium)"
              >
                <span>
                  t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb2uq
                </span>
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb2uq"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  <svg
                    class="has-fill"
                    fill="var(--black)"
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,21H5c-1.1,0-2-0.9-2-2V5c0-1.1,0.9-2,2-2h7v2H5v14h14v-7h2v7C21,20.1,20.1,21,19,21z"
                    />
                    <path
                      d="M21 10L19 10 19 5 14 5 14 3 21 3z"
                    />
                    <path
                      d="M6.7 8.5H22.3V10.5H6.7z"
                      transform="rotate(-45.001 14.5 9.5)"
                    />
                  </svg>
                </a>
                <span
                  class="c5"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class=""
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </td>
          <td>
            0
          </td>
          <td>
            t0103
          </td>
          <td>
            m/44'/1'/0'/0/2
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="c6 c7"
    >
      <label
        class="c8 c9"
      >
        <div>
          <span>
            Expert Mode
          </span>
          
        </div>
        <div
          class="toggle-wrapper"
        >
          <input
            type="checkbox"
          />
          <span
            class="toggle"
          />
        </div>
      </label>
      <button
        class="c10"
      >
        Next account
      </button>
    </div>
  </div>
</div>
`;

exports[`AccountSelector it displays the loading screen first 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  background-color: var(--purple-medium);
  width: 3em;
  height: 3em;
  margin: 0;
}

.c1:after {
  position: absolute;
  display: block;
  content: '';
  top: 0;
  left: 0;
  background-color: var(--purple-dark);
  -webkit-animation-name: gxoozo;
  animation-name: gxoozo;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  width: calc(3em * 0.5);
  height: calc(3em * 0.5);
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    />
    <p>
      Loading...
    </p>
  </div>
</div>
`;

exports[`AccountSelector it displays the selected account when showSelectedACcount is passed 1`] = `
.c3 {
  position: relative;
  display: inline-block;
  background-color: var(--purple-medium);
  width: 2em;
  height: 2em;
  margin: 0;
}

.c3:after {
  position: absolute;
  display: block;
  content: '';
  top: 0;
  left: 0;
  background-color: var(--purple-dark);
  -webkit-animation-name: gxoozo;
  animation-name: gxoozo;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  width: calc(2em * 0.5);
  height: calc(2em * 0.5);
}

.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  background-color: var(--blue-gray);
}

.c1 hr {
  border-color: var(--gray-medium);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: var(--space-l);
}

.c5 h4 {
  margin: 0;
  color: var(--gray-dark);
}

.c5 p {
  margin: 0;
  line-height: 1.5;
}

.c7 {
  position: relative;
  cursor: pointer;
}

.c7 svg {
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c7 .copy-text {
  position: absolute;
  top: calc(50% - 0.2em);
  left: calc(100% + 0.25em);
  color: var(--purple-medium);
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
  pointer-events: none;
}

.c7:hover svg {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c7:hover .copy-text {
  opacity: 1;
  pointer-events: all;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25em;
  line-height: 1.5;
}

.c6 > a {
  color: var(--purple-medium);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 > a:hover {
  color: var(--purple-medium);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 > a svg {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
  vertical-align: middle;
}

.c6 > a svg:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
  fill: var(--purple-medium);
}

.c4 {
  position: relative;
  display: inline-block;
  width: 18px;
  height: 18px;
  border-width: 1px;
  border-style: solid;
  border-radius: 50%;
  margin: 4px 0 0 1em;
  border-color: var(--purple-medium);
}

.c4:after {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 50%;
  width: 11px;
  height: 11px;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c4:after {
  background-color: var(--purple-medium);
}

<div>
  <div>
    <div
      class="c0 c1"
    >
      <h2>
        Select Account
      </h2>
      <p />
    </div>
    <br />
    <table>
      <caption>
        <div
          class="c2"
        >
          <span
            class="c3"
          />
          <span>
            Loading ...
          </span>
        </div>
      </caption>
      <thead>
        <tr>
          <th />
          <th>
            #
          </th>
          <th>
            Name
          </th>
          <th>
            Address
          </th>
          <th>
            Balance
          </th>
          <th>
            Id
          </th>
          <th>
            Path
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="selectable"
        >
          <td
            data-testid="selected-account"
          >
            <div
              class="c4"
              color="purple"
            />
          </td>
          <td>
            0
          </td>
          <td>
            Account 
            0
          </td>
          <td>
            <div
              class="c5"
            >
              <div
                class="c6"
                color="var(--purple-medium)"
              >
                <span>
                  t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi
                </span>
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  <svg
                    class="has-fill"
                    fill="var(--black)"
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,21H5c-1.1,0-2-0.9-2-2V5c0-1.1,0.9-2,2-2h7v2H5v14h14v-7h2v7C21,20.1,20.1,21,19,21z"
                    />
                    <path
                      d="M21 10L19 10 19 5 14 5 14 3 21 3z"
                    />
                    <path
                      d="M6.7 8.5H22.3V10.5H6.7z"
                      transform="rotate(-45.001 14.5 9.5)"
                    />
                  </svg>
                </a>
                <span
                  class="c7"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class=""
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </td>
          <td>
            1
          </td>
          <td>
            t0101
          </td>
          <td>
            m/44'/1'/0'/0/0
          </td>
        </tr>
        <tr
          class="selectable"
        >
          <td />
          <td>
            1
          </td>
          <td>
            Account 
            1
          </td>
          <td>
            <div
              class="c5"
            >
              <div
                class="c6"
                color="var(--purple-medium)"
              >
                <span>
                  t1nq5k2mps5umtebdovlyo7y6a3ywc7u4tobtuo3a
                </span>
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1nq5k2mps5umtebdovlyo7y6a3ywc7u4tobtuo3a"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  <svg
                    class="has-fill"
                    fill="var(--black)"
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,21H5c-1.1,0-2-0.9-2-2V5c0-1.1,0.9-2,2-2h7v2H5v14h14v-7h2v7C21,20.1,20.1,21,19,21z"
                    />
                    <path
                      d="M21 10L19 10 19 5 14 5 14 3 21 3z"
                    />
                    <path
                      d="M6.7 8.5H22.3V10.5H6.7z"
                      transform="rotate(-45.001 14.5 9.5)"
                    />
                  </svg>
                </a>
                <span
                  class="c7"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class=""
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </td>
          <td>
            5
          </td>
          <td>
            t0102
          </td>
          <td>
            m/44'/1'/0'/0/1
          </td>
        </tr>
        <tr
          class="selectable"
        >
          <td />
          <td>
            2
          </td>
          <td>
            Account 
            2
          </td>
          <td>
            <div
              class="c5"
            >
              <div
                class="c6"
                color="var(--purple-medium)"
              >
                <span>
                  t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb2uq
                </span>
                <a
                  href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb2uq"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  <svg
                    class="has-fill"
                    fill="var(--black)"
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,21H5c-1.1,0-2-0.9-2-2V5c0-1.1,0.9-2,2-2h7v2H5v14h14v-7h2v7C21,20.1,20.1,21,19,21z"
                    />
                    <path
                      d="M21 10L19 10 19 5 14 5 14 3 21 3z"
                    />
                    <path
                      d="M6.7 8.5H22.3V10.5H6.7z"
                      transform="rotate(-45.001 14.5 9.5)"
                    />
                  </svg>
                </a>
                <span
                  class="c7"
                  color="var(--purple-medium)"
                  role="button"
                >
                  <svg
                    class=""
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#1A0066"
                      height="12"
                      width="12"
                      x="4"
                      y="0"
                    />
                    <rect
                      fill="#E0D7FE"
                      height="12"
                      width="12"
                      x="0"
                      y="4"
                    />
                  </svg>
                  <span
                    class="copy-text"
                  >
                    Copy
                  </span>
                </span>
              </div>
            </div>
          </td>
          <td>
            0
          </td>
          <td>
            t0103
          </td>
          <td>
            m/44'/1'/0'/0/2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
